--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=Customer Service
 spring.sleuth.sampler.percentage=1.0
-server.port=8081
-
+management.endpoints.web.exposure.include=*
