--- a/k8s-template.yaml
+++ b/k8s-template.yaml
@@ -17,7 +17,24 @@ spec:
           imagePullPolicy: Always
           name: api2
           ports:
-            - containerPort: 8080
+            - name: api
+              containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 10
+            timeoutSeconds: 2
+            periodSeconds: 3
+            failureThreshold: 1
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 20
+            timeoutSeconds: 2
+            periodSeconds: 8
+            failureThreshold: 1
 ---
 apiVersion: v1
 kind: Service
@@ -25,11 +42,13 @@ metadata:
   name: api2
   labels:
     app: api2
+    type: microservice
+    release: app
 spec:
   ports:
     - port: 8080
       targetPort: 8080
       protocol: TCP
-      name: http
+      name: api
   selector:
     app: api2
