--- a/k8s-template.yaml
+++ b/k8s-template.yaml
@@ -13,7 +13,7 @@ spec:
         app: api2
     spec:
       containers:
-        - image: <image_url>
+        - image: localhost:5000/<image_url>
           imagePullPolicy: Always
           name: api2
           ports:
